# amd-efs

./: Cargo.toml  DESIGN.md  Makefile  README.md  TODO.md  rustfmt.toml
.github/buildomat/jobs/: build-and-test-and-lint.sh
.github/workflows/: ci.yaml
src/: adapters.rs  allocators.rs  amdfletcher32.rs  efs.rs  flash.rs  lib.rs  ondisk.rs  serializers.rs  struct_accessors.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs
