[package]
name = "amd-efs"
version = "0.3.1"
authors = ["Oxide Computer Company"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amd-flash = { git = "ssh://git@github.com/oxidecomputer/amd-flash.git", tag = "v0.2.1" }
byteorder = { version = "1.4.3", default-features = false }
fletcher = "0.1.0"
modular-bitfield = { version = "0.11.2", default-features = false }

#
# In order to use macros as discriminants in enums that make use of derive
# macros (e.g., AsBytes, FromPrimitive), we need the syn crate to have "full"
# enabled. The easiest way to do this is to use num-derive's "full-syntax",
# which passes "full" through to syn.
#
num-derive = { version = "0.3.0", features = [ "full-syntax" ] }
num-traits = { version = "0.2.12", default-features = false }
paste = "1.0"
schemars = { version = "0.8.8", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
strum = { version = "0.23", default-features = false, features = [] }
strum_macros = { version = "0.23.1" }
zerocopy = "0.6"
thiserror = { version = "1.0.38", optional = true }
memoffset = "0.5"
quote = { version = "1.0.33", default-features = false, features = [] }

[features]
default = []
std = ["thiserror", "amd-flash/std"]
serde = []
schemars = ["std", "serde", "dep:schemars"]
