[package]
name = "amd-efs"
version = "0.4.0"
authors = ["Oxide Computer Company"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
fletcher = "0.1.0"
modular-bitfield = { version = "0.11.2", default-features = false }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.12", default-features = false }
paste = "1.0"
schemars = { version = "0.8.8", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
strum = { version = "0.23", default-features = false, features = [] }
strum_macros = { version = "0.23.1" }
zerocopy = "0.6"
thiserror = { version = "1.0.38", optional = true }
memoffset = "0.5"

[features]
default = []
std = ["thiserror"]
serde = []
schemars = ["std", "serde", "dep:schemars"]
