workspace = { members = ["xtask"] }

[package]
name = "amd-efs"
version = "0.4.4"
authors = ["Oxide Computer Company"]
edition = "2024"
license = "MPL-2.0"

[dependencies]
fletcher = "1.0"
modular-bitfield = { version = "0.11.2", default-features = false }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.12", default-features = false }
paste = "1.0"
schemars = { version = "0.8.8", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
strum = { version = "0.27", default-features = false, features = [] }
strum_macros = { version = "0.27" }
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = { version = "2.0", optional = true }
memoffset = "0.9"

[features]
default = []
std = ["thiserror"]
serde = []
schemars = ["std", "serde", "dep:schemars"]
